# CG

./: .gitignore  VulkanPropertySheet.props
AstrophysicsSim/: AstrophysicsSim.sln
AstrophysicsSim/src/BlackHole/: BlackHole.h  BlackHole.vcxproj  BlackHole.vcxproj.filters  CelestialBody.h  black_hole.cpp  imgui.ini  skybox_shader.frag  skybox_shader.vert
AstrophysicsSim/src/common/: camera.h  model.h  shader.h
TestingGround/: TestingGround.sln
TestingGround/OrbitingSim3D/: OrbitingSim3D.cpp  OrbitingSim3D.vcxproj  OrbitingSim3D.vcxproj.filters  imgui.ini  shader.frag  shader.vert
TestingGround/ThreadTest/: ThreadTest.vcxproj  ThreadTest.vcxproj.filters  threadssss.cpp
TestingGround/src/OrbitingSim/: OrbitingSim.cpp  (+2 more)
VulkanBackend/: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json
VulkanBackend/Renderer/: VulkanBase.cpp  VulkanBase.h
VulkanBackend/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.h
VulkanBackend/VulkanBackend/: CMakeLists.txt
VulkanBackend/VulkanBackend/Triangle/: CMakeLists.txt  Triangle.cpp
VulkanBackend/src/10.3.asteroids_instanced/: CMakeLists.txt
VulkanBackend/src/NBody/: CMakeLists.txt  nbody.cpp
VulkanBackend/src/NBody/shaders/: cache.comp  nbody.comp  shader.frag  shader.vert
VulkanBackend/src/Renderer/: VulkanBase.cpp  VulkanBase.h
VulkanBackend/src/TestingGround/: test.cpp
VulkanBackend/src/Triangle/: CMakeLists.txt  Triangle.cpp  data.h
VulkanBackend/src/Triangle/shaders/: shader.comp  shader.frag  shader.vert
VulkanBackend/src/dhh/: Filesystem.hpp  Pipeline.hpp  Shader.hpp  VulkanInitializer.hpp
VulkanBackend/src/particles/: CMakeLists.txt  particles.cpp
VulkanBackend/src/particles/shaders/: cache.comp  nbody.comp  shader.frag  shader.vert
VulkanBackend/src/snippets/: CMakeLists.txt  snippets.h  snippets_test.cpp
learnopengl.com/: PropertySheet.props  learnopengl.com.sln
learnopengl.com/1.1.hello_window/: 1.1.hello_window.vcxproj.filters
learnopengl.com/1.colors/: 1.colors.vcxproj.filters  colors.cpp
learnopengl.com/2.1.basic_lighting_diffuse/: 2.1.basic_lighting_diffuse.vcxproj.filters  basic_lighting_diffuse.cpp
learnopengl.com/2.1.hello_triangle/: 2.1.hello_triangle.vcxproj
learnopengl.com/2.2.basic_lighting_specular/: 2.2.basic_lighting_specular.vcxproj.filters  basic_lighting_specular.cpp
learnopengl.com/2.2.hello_triangle_indexed/: 2.2.hello_triangle_indexed.vcxproj
learnopengl.com/2.3.hello_triangle_execise1/: 2.3.hello_triangle_execise1.vcxproj.filters
learnopengl.com/2.4.hello_triangle_execise2/: 2.4.hello_triangle_execise2.vcxproj  hello_triangle_execise2.cpp
learnopengl.com/2.5.hello_triangle_execise3/: 2.5.hello_triangle_execise3.vcxproj.filters  hello_triangle_execise3.cpp
learnopengl.com/3.1.materials/: 3.1.materials.vcxproj.filters  cube.frag
learnopengl.com/3.2.shaders_interpolation/: 3.2.shaders_interpolation.vcxproj  3.2.shaders_interpolation.vcxproj.filters  shaders_interpolation.cpp
learnopengl.com/3.3.shaders_class/: 3.3.shaders_class.vcxproj  3.3.shaders_class.vcxproj.filters  shader.frag
learnopengl.com/3.4.shaders_execise1/: 3.4.shaders_execise1.vcxproj  shader.vert
learnopengl.com/3.5.shaders_execise2/: 3.5.shaders_execise2.vcxproj  3.5.shaders_execise2.vcxproj.filters  shader.vert
learnopengl.com/3.6.shaders_execise3/: 3.6.shaders_execise3.vcxproj
learnopengl.com/4.1.light_maps_diffuse_map/: 4.1.light_maps_diffuse_map.vcxproj.filters
learnopengl.com/4.1.textures/: shader.frag
learnopengl.com/4.2.light_maps_specular_map/: 4.2.light_maps_specular_map.vcxproj  cube.frag
learnopengl.com/4.2.textures_combined/: 4.2.textures_combined.vcxproj  4.2.textures_combined.vcxproj.filters
learnopengl.com/4.3.light_maps_execise3/: 4.3.light_maps_execise3.vcxproj  light_maps_execise3.cpp
learnopengl.com/4.3.textures_execise1/: 4.3.textures_execise1.vcxproj  textures_execise1.cpp
learnopengl.com/4.4.light_maps_execise4/: 4.4.light_maps_execise4.vcxproj  4.4.light_maps_execise4.vcxproj.filters
learnopengl.com/5.1.light_casters_directional/: 5.1.light_casters_directional.vcxproj.filters  cube.frag
learnopengl.com/5.1.transformations/: transformations.cpp
learnopengl.com/5.2.light_casters_point/: 5.2.light_casters_point.vcxproj  5.2.light_casters_point.vcxproj.filters  cube.frag
learnopengl.com/5.2.transformations_execise2/: 5.2.transformations_execise2.vcxproj.filters  shader.vert
learnopengl.com/5.3.light_casters_spot/: 5.3.light_casters_spot.vcxproj.filters  light_casters_spot.cpp
learnopengl.com/5.4.light_casters_spot_soft/: cube.frag
learnopengl.com/6.2.coordinate_systems_depth/: 6.2.coordinate_systems_depth.vcxproj  6.2.coordinate_systems_depth.vcxproj.filters  coordinate_systems_depth.cpp
learnopengl.com/6.2.multiple_lights_execise1/: multiple_lights_execise1.cpp
learnopengl.com/6.3.coordinate_systems_multiple/: 6.3.coordinate_systems_multiple.vcxproj
learnopengl.com/6.multiple_lights/: 6.multiple_lights.vcxproj  6.multiple_lights.vcxproj.filters  cube.frag  lamp.vert
learnopengl.com/7.1.camera_circle/: 7.1.camera_circle.vcxproj  7.1.camera_circle.vcxproj.filters  camera_circle.cpp
learnopengl.com/7.2.camera_keyboard_dt/: 7.2.camera_keyboard_dt.vcxproj
learnopengl.com/7.3.camera_mouse_zoom/: 7.3.camera_mouse_zoom.vcxproj.filters
learnopengl.com/7.4.camera_class/: 7.4.camera_class.vcxproj  7.4.camera_class.vcxproj.filters  camera_class.cpp  shader.frag
learnopengl.com/common/: shader.h
opengl-tutorial/: opengl-tutorial.sln
opengl-tutorial/base/: VulkanBase.cpp  VulkanBase.h  VulkanDebug.cpp  VulkanDebug.h  VulkanShader.cpp  VulkanShader.h  VulkanTool.cpp  VulkanTool.h  VulkanType.cpp  VulkanType.h  base.vcxproj  base.vcxproj.filters  base_test.cpp  data.h
opengl-tutorial/dx_triangle/: dx_triangle.vcxproj  main.cpp
opengl-tutorial/gl_triangle/: Model.cpp  Model.h  data.h  gl_triangle.vcxproj  gl_triangle.vcxproj.filters  shader.cpp  shader.frag  shader.h  shader.vert  triangle.cpp
opengl-tutorial/t1_opening_window/: t1_opening_window.cpp  t1_opening_window.vcxproj  t1_opening_window.vcxproj.filters
(+213 files in other folders)
